# nccapy

./: .gitignore  README.md  TODO.md  TODO.org  mypy.ini  pyproject.toml  sonar-project.properties
.github/workflows/: python-package.yml  sonar-scan.yml  uv.yml
Geo/: BaseMesh.pyi  Obj.py  Obj.pyi
Math/: Mat3.py  Mat3.pyi  Mat4.py  Mat4.pyi  Transform.py  Transform.pyi  Util.py  Util.pyi  Vec3.py  Vec3.pyi  Vec4.py  Vec4.pyi  __init__.py
docs/source/: conf.py  index.rst  nccapy.rst  nccapy.tests.rst
examples/: DLA.py  DLACanvas.py  DLACanvas2.py  DLACanvas3.py  canvas.py  randomImages.py  splineImages.py
my-docs/: mkdocs.yml
my-docs/docs/: api.md
src/nccapy/: __init__.py
src/nccapy/Geo/: BaseMesh.py  Obj.py  Obj.pyi
src/nccapy/Image/: Canvas.py  Image.py  RGBA.py  __init__.py
src/nccapy/Math/: Mat2.py  Mat3.py  Mat4.py  Mat4.pyi  Quaternion.py  Transform.py  Transform.pyi  Util.py  Util.pyi  Vec2.py  Vec2.pyi  Vec3.py  Vec3.pyi  Vec4.py  Vec4.pyi  __init__.py  __init__.pyi
tests/: gen_mat4_tests.jl  mat3Data.py  mat4Data.py  pip-test.py  test_Canvas.py  test_Image.py  test_Mat3.py  test_Mat4.py  test_Quaternion.py  test_Vec2.py  test_Vec3.py  test_Vec4.py  test_obj.py  test_transform.py  test_util.py
timer/: Timer.py
