[project]
name = "nccapy"
authors = [
  { name="Jon Macey", email="jmacey@bournemouth.ac.uk" },
]
description = "nccapy is a python package use for teaching graphics at the NCCA"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
license = {file = "LICENSE.txt"}

[project.urls]
Homepage = "https://github.com/NCCA/nccapy"
Issues = "https://github.com/NCCA/nccapy/issues"

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = [ "docs"]

[tool.black]
line-length = 99
target-version = ["py37", "py38", "py39", "py310", "py311"]
skip-magic-trailing-comma = true

[tool.isort]
py_version = 37
profile = "black"
line_length = 99
combine_as_imports = true
skip_gitignore = true
